Fix navbar spacing issue

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,7 +1,7 @@
 .nav-bar {
     grid-area: 1 / 1 / 2 / 3;
     margin-bottom: 25px;
-    height: 60px;
+    height: 70px;
     background-color: white;
     border: 3px solid black;
     min-width: 625px;
@@ -16,6 +16,7 @@
 }
 
 .navbar-website-title {
+    grid-area: 1 / 1 / 3 / 2;
     text-align: left;
     margin-left: 20px;
     min-width: 175px;
